# rivet

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  review_body.txt
.agent/notes/: driver-test-progress.md
.agents/: resume  setup
.amp/: services.yaml
.github/workflows/: frontend.yml  publish.yaml
container-runner/: Cargo.toml  Dockerfile.release  README.md
container-runner/examples/e2e-test/: README.md  common.mjs  configure-serverless.mjs  create-actor.mjs  create-cloud-actor.mjs  docker-compose.yml  load-test.mjs  package-lock.json  package.json  run-cloud-clients.sh  run.sh  verify-container-runner.sh  ws-test-client.mjs
container-runner/examples/e2e-test/host/: config.jsonc  run-host-fishnet.sh  run-host-loadtest.sh  run-host-tests.sh  run-host.sh
container-runner/examples/e2e-test/rivet-engine/: config.jsonc
container-runner/examples/test-server/: Dockerfile  Dockerfile.pingpong  package-lock.json  package.json  server.mjs
container-runner/examples/unity-demo/: Dockerfile  README.md  setup-and-build.sh
container-runner/examples/unity-demo/Assets/: DefaultPrefabObjects.asset
container-runner/examples/unity-demo/Assets/DemoAssets/: Floor.mat  NetworkPlayer.mat  NetworkPlayer.prefab
container-runner/examples/unity-demo/Assets/Editor/: BuildScript.cs  ProjectBootstrap.cs
container-runner/examples/unity-demo/Assets/Scenes/: Main.unity
container-runner/examples/unity-demo/Assets/Scripts/: NetworkPlayerController.cs  ServerBootstrap.cs
container-runner/examples/unity-demo/ProjectSettings/: ProjectSettings.asset
container-runner/src/: actor.rs  callbacks.rs  child.rs  input.rs  inspector.rs  main.rs  proxy.rs  serverless.rs
container-runner/tests/inline/: boot_id.rs  input.rs  inspector.rs
docker/engine/: Dockerfile
docs-internal/engine/: ACTOR_KV.md  SQLITE_OPTIMIZATIONS.md  depot.md  napi-bridge.md  rivetkit-core-internals.md  rivetkit-core-state-management.md  sqlite-vfs.md
docs-internal/integrations/: vercel-world-defaults-audit.md
docs-internal/rivetkit-typescript/: ACTOR_KV_STRUCTURE.md  (+1 more)
engine/: CLAUDE.md
engine/sdks/rust/actor-runtime-socket-protocol/: Cargo.toml  build.rs
engine/sdks/rust/actor-runtime-socket-protocol/src/: generated.rs  lib.rs  versioned.rs
engine/sdks/rust/actor-runtime-socket-protocol/tests/: versioned.rs
examples/hono/: package.json
frontend/: CLAUDE.md  package.json  vite.config.ts
rivetkit-asyncapi/: asyncapi.json
rivetkit-typescript/: CLAUDE.md
website/: CLAUDE.md  Dockerfile  package.json  redirects.mjs
(+419 files in other folders)
