[package]
name = "rivet-container-runner"
description = "Rivet serverless runner that hosts one actor by spawning a child game-server process and proxying Rivet's tunneled traffic to it."
publish = false
autoexamples = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rivet-container-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["env"] }
futures-util.workspace = true
nix = { workspace = true, features = ["process"] }
reqwest = { workspace = true, features = ["stream"] }
rivetkit.workspace = true
scc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
