[package]
name = "rivet-actor-runtime-socket-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Versioned protocol for the experimental Actor Runtime Socket"

[dependencies]
anyhow.workspace = true
serde_bare.workspace = true
serde.workspace = true
vbare.workspace = true

[build-dependencies]
vbare-compiler.workspace = true
